--- a/simple_test_project01/simple_test_root/podcast/templates/podcast/rate_podcast.html
+++ b/simple_test_project01/simple_test_root/podcast/templates/podcast/rate_podcast.html
@@ -6,23 +6,31 @@
 
 {% block content %}
 <div class="container mt-4">
-    {% if user.is_staff %}
-        <h2>Access Denied</h2>
-        <p>You do not have permission to access this page.</p>
-    {% else %}
-        <h3>Rate Podcast: {{ podcast.pod_name }}</h3>
-        <form method="post">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="id_rating">Rating:</label>
-                {{ form.rating }}
-            </div>
-            <div class="form-group">
-                <label for="id_comment">Comment: (optional)</label>
-                <textarea id="id_comment" name="comment" rows="2" cols="8" class="form-control"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit Rating</button>
-        </form>
-    {% endif %}
+    <div class="row">
+        <div class="col-md-6">
+            {% if user.is_staff %}
+                <h2>Access Denied</h2>
+                <p>You do not have permission to access this page.</p>
+            {% else %}
+                <h3>Rate Podcast: {{ podcast.pod_name }}</h3>
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="id_rating">Rating:</label>
+                        {{ form.rating }}
+                    </div>
+                    <div class="form-group">
+                        <label for="id_comment">Comment: (optional)</label>
+                        <textarea id="id_comment" name="comment" rows="2" cols="8" class="form-control"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit Rating</button>
+                </form>
+            {% endif %}
+        </div>
+        <div class="col-md-6">
+            <!-- Your image here -->
+            <img src="{{ podcast.pod_pic.url }}" alt="{{ podcast.pod_name }}" class="img-fluid" style="width: 300px; height: 300px;">
+        </div>
+    </div>
 </div>
 {% endblock content %}
